prometheus/examples/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-operated
  namespace: myproject
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prom.minishift.local
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operated
          servicePort: web
